<resources>
    <string name="app_name">Examen_Solis_Cordova</string>
    <string name="CTituloNombre_IngresarS">Ingrese un numero: </string>
    <string name="CNumero_IngresoS"></string>
    <string name="CBoton1S">INGRESAR</string>
    <string name="CBoton2S">CERRAR</string>
    <string name="CListaNumerosS"></string>
    <string name="CVectorIndicesS"></string>
    <string name="CVectorOriginalS"></string>
    <string name="CTitulo1S">Visualizacion del vector ORDENADO usando el vector Indices</string>
    <string name="CTitulo2S">Vector de Indices</string>
    <string name="CTitulo3S">Vector Original</string>
    <string name="Cboton_OrdenarS">ORDENAS</string>
    <string name="Cboton_MostrarS">MOSTRAR</string>
    <string name="Cboton_SegundaActividadS">SEGUNDA ACTIVIDAD</string>

</resources>